--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
   <body>
     <header class="header-content">
       <a href="#" class="logo">
-        <img src="/Images/StudySyn.svg" alt="Logo" class="logo-icon" />
+        <img src="/Study Sync/StudySyn.svg" alt="Logo" class="logo-icon" />
         <span class="text">StudySync</span></a
       >
 
@@ -24,7 +24,7 @@
       <a href="#" class="contact-button">Contact Us</a>
 
       <button class="menu-button">
-        <img src="/Images/Hamburger.svg" alt="menu_button" class="menu-icon" />
+        <img src="./Study Sync/Hamburger.svg" alt="menu_button" class="menu-icon" />
       </button>
     </header>
 
@@ -52,7 +52,7 @@
           <div class="right-content">
             <div class="image-container">
               <img
-                src="/Images/usgs-hoS3dzgpHzw-unsplash.jpg"
+                src="./Study Sync/usgs-hoS3dzgpHzw-unsplash.jpg"
                 alt="section-image"
                 class="section-image"
               />
@@ -67,7 +67,7 @@
             <span class="logotext"
               ><img
                 class="google"
-                src="/Images/Google.svg"
+                src="./Study Sync/Google.svg"
                 alt="Google-logo"
               />Google</span
             >
@@ -75,7 +75,7 @@
             <span class="logotext"
               ><img
                 class="microsoft"
-                src="/Images/Microsoft.svg"
+                src="./Study Sync/Microsoft.svg"
                 alt="Microsoft-logo"
               />Microsoft</span
             >
@@ -83,7 +83,7 @@
             <span class="logotext"
               ><img
                 class="linkedin"
-                src="/Images/linkedin.svg"
+                src="./Study Sync/linkedin.svg"
                 alt="LinkedIn-logo"
               />LinkedIn</span
             >
@@ -91,7 +91,7 @@
             <span class="logotext"
               ><img
                 class="vectoredu"
-                src="/Images/VectorEdu.svg"
+                src="./Study Sync/VectorEdu.svg"
                 alt="VectorEdu-logo"
               />VectorEdu</span
             >
@@ -113,7 +113,7 @@
                 <div class="logo-background">
                   <img
                     class="image-logo"
-                    src="/Images/PersonalizedLearn.svg"
+                    src="./Study Sync/PersonalizedLearn.svg"
                     alt=""
                   />
                 </div>
@@ -129,7 +129,7 @@
                 <div class="logo-background">
                   <img
                     class="image-logo"
-                    src="/Images/Affordability.svg"
+                    src="./Study Sync/Affordability.svg"
                     alt=""
                   />
                 </div>
@@ -145,7 +145,7 @@
                 <div class="logo-background">
                   <img
                     class="image-logo"
-                    src="/Images/IndustryPatner.svg"
+                    src="./Study Sync/IndustryPatner.svg"
                     alt=""
                   />
                 </div>
@@ -161,7 +161,7 @@
                 <div class="logo-background">
                   <img
                     class="image-logo"
-                    src="/Images/InnovativeTech.svg"
+                    src="./Study Sync/InnovativeTech.svg"
                     alt=""
                   />
                 </div>
@@ -175,7 +175,7 @@
 
               <div class="card5 card">
                 <div class="logo-background">
-                  <img class="image-logo" src="/Images/Analytics.svg" alt="" />
+                  <img class="image-logo" src="./Study Sync/Analytics.svg" alt="" />
                 </div>
                 <p class="para">Responsive Support</p>
                 <p>
@@ -187,7 +187,7 @@
 
               <div class="card6 card">
                 <div class="logo-background">
-                  <img class="image-logo" src="/Images/Analytics.svg" alt="" />
+                  <img class="image-logo" src="./Study Sync/Analytics.svg" alt="" />
                 </div>
                 <p class="para">Analytics and Insights</p>
                 <p>
@@ -214,7 +214,7 @@
                 facilis neque nisi."
               </p>
               <div class="innerBox">
-                <img class="all-images" src="/Images/avatar1.png" alt="" />
+                <img class="all-images" src="./Study Sync/avatar1.png" alt="" />
                 <p class="names">Lorem, ipsum.</p>
                 <p class="desc-text people-name">Mother</p>
               </div>
@@ -228,7 +228,7 @@
                 facilis neque nisi."
               </p>
               <div class="innerBox">
-                <img class="all-images" src="/Images/avatar2.png" alt="" />
+                <img class="all-images" src="./Study Sync/avatar2.png" alt="" />
                 <p class="names">Lorem, ipsum.</p>
                 <p class="desc-text people-name">Brother</p>
               </div>
@@ -242,7 +242,7 @@
                 facilis neque nisi."
               </p>
               <div class="innerBox">
-                <img class="all-images" src="/Images/avatar3.png" alt="" />
+                <img class="all-images" src="./Study Sync/avatar3.png" alt="" />
                 <p class="names">Lorem, ipsum.</p>
                 <p class="desc-text people-name">Father</p>
               </div>
@@ -252,7 +252,7 @@
 
         <section class="newsletter">
           <div class="leftbox">
-            <img class="image-red" src="/Images/img.png" alt="" />
+            <img class="image-red" src="./Study Sync/img.png" alt="" />
           </div>
 
           <div class="rightbox">
@@ -276,7 +276,7 @@
           <section class="footer">
             <div class="footer1">
               <div class="footer-sub">
-                <img src="/Images/StudySyn.svg" alt="StudySyn_logo" />
+                <img src="./Study Sync/StudySyn.svg" alt="StudySyn_logo" />
 
                 <span> StudySync</span>
               </div>
@@ -284,22 +284,22 @@
               <div class="imagess">
                 <img
                   class="footer-logos"
-                  src="/Images/instagram.svg"
+                  src="./Study Sync/instagram.svg"
                   alt="Instagram_logo"
                 />
                 <img
                   class="footer-logos"
-                  src="/Images/linkedin-copy.svg"
+                  src="./Study Sync/linkedin-copy.svg"
                   alt="LinkedIn_logo"
                 />
                 <img
                   class="footer-logos"
-                  src="/Images/Microsoft.svg"
+                  src="./Study Sync/Microsoft.svg"
                   alt="Microsoft_logo"
                 />
                 <img
                   class="footer-logos"
-                  src="/Images/twitter.svg"
+                  src="./Study Sync/twitter.svg"
                   alt="Twitter_logo"
                 />
               </div>
